erDiagram
    ROLE {
        uuid role_id PK
        varchar name
    }

    USER {
        uuid user_id PK
        uuid role_id FK
        varchar username
        varchar password_hash
        varchar display_name
        timestamp created_at
        boolean is_active
    }

    PATIENT {
        uuid patient_id PK
        varchar external_ref
        varchar display_name
    }

    SESSION {
        uuid session_id PK
        uuid patient_id FK
        timestamp start_time
        timestamp end_time
        varchar source_type
        varchar status
        varchar record_name
    }

    MODEL_VERSION {
        uuid model_version_id PK
        varchar name
        varchar artifact_uri
        jsonb metrics_json
        timestamp deployed_at
        boolean is_active
    }

    PREDICTION_BEAT {
        uuid pred_id PK
        uuid session_id FK
        uuid model_version_id FK
        float beat_ts_sec
        varchar pred_class
        float confidence
        float pA
        jsonb probs_json
        timestamp created_at
    }

    ALERT {
        uuid alert_id PK
        uuid session_id FK
        uuid model_version_id FK
        timestamp start_time
        timestamp last_update
        varchar alert_type
        varchar status
        float severity
        jsonb evidence_json
    }

    ALERT_ACTION {
        uuid action_id PK
        uuid alert_id FK
        uuid user_id FK
        timestamp action_time
        varchar action_type
        text reason
        text note
    }

    SYSTEM_SETTING {
        uuid setting_id PK
        varchar key
        jsonb current_value_json
    }

    SETTING_VERSION {
        uuid setting_version_id PK
        uuid setting_id FK
        uuid changed_by FK
        timestamp changed_at
        jsonb value_json
    }

    ROLE ||--|{ USER : has
    PATIENT ||--|{ SESSION : has
    SESSION ||--|{ PREDICTION_BEAT : contains
    SESSION ||--|{ ALERT : triggers
    MODEL_VERSION ||--|{ PREDICTION_BEAT : produces
    MODEL_VERSION ||--|{ ALERT : references
    ALERT ||--|{ ALERT_ACTION : has
    USER ||--|{ ALERT_ACTION : performs
    SYSTEM_SETTING ||--|{ SETTING_VERSION : tracks
    USER ||--|{ SETTING_VERSION : changes
